--- a/style.css
+++ b/style.css
@@ -16,3 +16,40 @@
   --color-hero-overlay: #39186f 40%;
   --color-course-overlay: #200813 63%;
 }
+
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: var(--font-family-body);
+}
+
+.header {
+  display: flex;
+  width: 100%;
+  height: 80px;
+  justify-content: center;
+  align-items: center;
+  background: var(--color-background-black);
+}
+
+.header-logo-wrapper {
+  margin: 0;
+}
+
+.header-logo {
+  height: 50px;
+}
+
+@media (max-width: 750px) {
+  .header {
+    height: 60px;
+  }
+
+  .header-logo {
+    height: 30px;
+  }
+}
