--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@
   --color-form-border-red: #df6da2;
   --color-button-hover-red: #f043a5;
   --color-course-hover-yellow: #f4e877;
-  --color-hero-overlay: #39186f 40%;
-  --color-course-overlay: #200813 63%;
+  --color-hero-overlay: rgba(57, 24, 111, 0.4);
+  --color-course-overlay: rgba(32, 8, 19, 0.63);
 }
 
 *::before,
@@ -27,21 +27,32 @@ body {
   font-family: var(--font-family-body);
 }
 
+img {
+  display: block;
+}
+
+/* header */
+
 .header {
   display: flex;
-  width: 100%;
   height: 80px;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
   background: var(--color-background-black);
 }
 
 .header-logo-wrapper {
   margin: 0;
+  height: 50px;
 }
 
 .header-logo {
-  height: 50px;
+  height: 100%;
 }
 
 @media (max-width: 750px) {
@@ -51,5 +62,74 @@ body {
 
   .header-logo {
     height: 30px;
+  }
+}
+
+/* hero */
+
+.hero {
+  background-image: url(./img/hero.png);
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 94px 40px;
+  position: relative;
+  margin-top: 80px;
+}
+
+.hero::before {
+  content: "";
+  background-color: var(--color-hero-overlay);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.hero-container {
+  width: 100%;
+  max-width: 1000px;
+  display: flex;
+  justify-content: flex-end;
+  z-index: 10;
+}
+
+.hero-texts {
+  color: var(--color-accent-yellow);
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.hero-main-copy {
+  font-size: 64px;
+  line-height: 1;
+  margin: 0;
+  font-family: var(--font-family-heading);
+  letter-spacing: 0.05em;
+}
+
+.hero-main-copy-accent {
+  color: var(--color-accent-red);
+}
+
+.hero-sub-copy {
+  margin: 0;
+}
+
+@media (max-width: 750px) {
+  .hero {
+    padding: 40px 20px;
+    margin-top: 60px;
+  }
+
+  .hero-container {
+    justify-content: flex-start;
+  }
+
+  .hero-texts {
+    gap: 20px;
   }
 }
