--- a/style.css
+++ b/style.css
@@ -133,3 +133,63 @@ img {
     gap: 20px;
   }
 }
+
+h2 {
+  display: block;
+}
+
+.about-container {
+  gap: 40px;
+}
+
+.about {
+  background-color: var(--color-background-black);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 80px 0;
+}
+
+.container {
+  max-width: 800px;
+  padding: 0 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+}
+
+.section-ttl {
+  font-family: var(--font-family-heading);
+  color: var(--color-white);
+  font-size: 32px;
+  letter-spacing: 0.02em;
+  margin: 0;
+}
+
+.about-accent-red {
+  color: var(--color-accent-red);
+}
+.about-accent-yellow {
+  color: var(--color-accent-yellow);
+  margin-right: -8px;
+}
+
+.about-body-and-img {
+  display: flex;
+  gap: 20px;
+}
+
+.about-body {
+  color: var(--color-white);
+  flex: 1;
+}
+
+.about-img-wrapper {
+  width: 320px;
+  height: 180px;
+}
+
+.about-img {
+  width: 100%;
+}
