--- a/style.css
+++ b/style.css
@@ -334,6 +334,10 @@ h2 {
     font-size: 12px;
   }
 
+  .show-more-button {
+    height: 40px;
+  }
+
   .course-img {
     width: 100%;
     height: 220px;
