--- a/style.css
+++ b/style.css
@@ -363,3 +363,87 @@ img {
     width: 260px;
   }
 }
+
+.signup {
+  background-color: var(--color-accent-yellow);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 80px 0;
+}
+
+.signup-section-ttl {
+  color: var(--color-black);
+}
+
+.signup-form {
+  width: 100%;
+  display: grid;
+  row-gap: 40px;
+}
+
+.signup-container {
+  gap: 40px;
+}
+
+.signup-input-container {
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  width: 100%;
+  gap: 20px;
+}
+
+.signup-label {
+  font-size: 20px;
+}
+
+.signup-input {
+  border-radius: 8px;
+  border: 1px solid var(--color-form-border-red);
+  background: var(--color-form-background-yellow);
+  color: var(--color-form-placeholder-gray);
+  display: flex;
+  font-size: 16px;
+  padding: 10px;
+}
+
+.signup-ambition-input {
+  display: flex;
+  align-items: flex-start;
+}
+
+#ambition {
+  height: 150px;
+  text-align: start;
+}
+
+.signup-button {
+  box-shadow: 4px 4px 0 var(--color-black);
+}
+
+@media (max-width: 750px) {
+  .signup-input-container {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.footer {
+  background: var(--color-background-black);
+  padding: 60px;
+}
+
+.footer-copyright {
+  color: var(--color-white);
+  text-align: center;
+}
+
+@media (max-width: 750px) {
+  .footer {
+    padding: 40px;
+  }
+
+  .footer-copyright {
+    font-size: 12px;
+  }
+}
