--- a/style.css
+++ b/style.css
@@ -394,7 +394,7 @@ img {
   display: grid;
   grid-template-columns: 250px 1fr;
   width: 100%;
-  gap: 20px;
+  row-gap: 20px;
 }
 
 .signup-label {
