--- a/style.css
+++ b/style.css
@@ -275,8 +275,10 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+  align-self: stretch;
   gap: 10px;
   text-decoration: none;
+  padding: 0 40px;
 }
 
 .course-card:hover {
@@ -288,7 +290,6 @@ img {
 .show-more-button {
   box-shadow: 4px 4px 0 var(--color-accent-yellow);
   display: flex;
-  width: 100%;
   transition: 0.3s;
 }
 .show-more-button:hover {
@@ -303,6 +304,7 @@ img {
   display: flex;
   justify-content: center;
   text-align: center;
+  flex-grow: 1;
 }
 
 .button-arrow {
@@ -356,11 +358,11 @@ img {
 
   .button {
     height: 40px;
+    padding: 0 20px;
   }
 
   .show-more-all {
     font-size: 14px;
-    width: 260px;
   }
 }
 
